force-app/main/default/objects/Market_Feedback__c/Market_Feedback__c.object-meta.xml
<CustomObject>
    <label>Market Feedback</label>
    <nameField>
        <label>Market Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>