force-app/main/default/objects/Market_Feedback__c/fields/Education_Debt_Management__c.field-meta.xml
<CustomField>
    <fullName>Education_Debt_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Education Debt Management</label>
    <type>Checkbox</type>
</CustomField>