force-app/main/default/objects/Market_Feedback__c/fields/Financial_Education__c.field-meta.xml
<CustomField>
    <fullName>Financial_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Education</label>
    <type>Checkbox</type>
</CustomField>