force-app/main/default/objects/Market_Feedback__c/fields/Industry_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Industry_Feedback__c</fullName>
    <label>Industry Feedback</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>