force-app/main/default/objects/Market_Feedback__c/fields/Market_Competition__c.field-meta.xml
<CustomField>
    <fullName>Market_Competition__c</fullName>
    <label>Market Competition</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>