force-app/main/default/objects/Market_Feedback__c/fields/Market_Feedback_Account__c.field-meta.xml
<CustomField>
    <fullName>Market_Feedback_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field shows the Account that is tied to this Opportunity - and Market Feedback is associated here.</inlineHelpText>
    <label>Market Feedback Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Market Feedback</relationshipLabel>
    <relationshipName>Market_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>