force-app/main/default/objects/Market_Feedback__c/fields/Professional_Services__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Professional Services</label>
    <type>Checkbox</type>
</CustomField>