force-app/main/default/objects/Market_Feedback__c/recordTypes/Market_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Market_Feedback</fullName>
    <active>true</active>
    <label>Market Feedback</label>
</RecordType>