force-app/main/default/objects/Market_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer_Feedback__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>